# mupif-accel

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
