[build-system]
requires = [
    "setuptools",
    "scikit-build>=0.13",
    "cmake",
    "ninja",
    # https://pybind11.readthedocs.io/en/stable/installing.html#include-with-pypi
    "pybind11[global]",
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
